2005-04-04  Alex Roitman  <shura@gramps-project.org>
	* src/ImageSelect.py (on_savephoto_clicked): Pass transaction to
	savephoto; (savephoto): take transaction argument);
	(on_photolist_drag_data_received): Pass transaction.

2005-04-03  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: commit family properly
	* src/PedView.py: change_active_person typo
	* src/PeopleView.py: don't change active person with updated
	* src/SelectChild.py: Fix callbacks
	* src/gramps_main.py: load active family on change
	* src/ArgHandler.py: Make sure all databases are closed before
	creating a new one.
	* src/DisplayModels.py: Calculate new nodes properly after a 
	node has be deleted. The node hasn't been removed from the database
	yet.
	* src/EditPerson.py: Add check for unknown gender before closing
	* src/EditSource.py: Remove unnecessary updates 
	* src/GrampsBSDDB.py: check for open in close()
	* src/GrampsDbBase.py: spelling error
	* src/MediaView.py: connect to database-changed
	* src/PedView.py: remove unused update function
	* src/PeopleView.py: connect to database-changed 
	* src/PlaceView.py: connect to database-changed 
	* src/SourceView.py: connect to database-changed, remove unnecessary
	callback
	* src/gramps_main.py: add database-changed signal

2005-04-03  Alex Roitman  <shura@gramps-project.org>
	* src/AddMedia.py: Remove unneeded update argument.
	* src/ArgHandler.py (auto_save_load): Mysterious workaround :-).
	* src/EditPlace.py (display_references): Drop media objects;
	(DeletePlaceQuery.query_response): use proper handle removal.
	* src/GrampsBSDDB.py (remove_object): emit media signal.
	* src/GrampsDbBase.py (GrampsDbBase): Add media-related signals;
	(commit_media_object,transaction_commit,undo): emit media signals.
	* src/ImageSelect.py (GlobalMediaProperties,DeleteMediaQuery):
	Remove unneeded update argument.
	* src/MediaView.py (media_add,media_update,media_delete): Add
	callbacks; (change_db): connect callbacks to signals;